# security-worst-practices-demo

./: .gitignore  Dockerfile  README.md  app.py  demo_exposed_secrets.txt  insecure_server.js  main.tf  orig_secret_snapshot.txt  package.json  pyproject.toml  requirements.txt  secret_formats_demo.md
.github/: dependabot.yml  secret-scanning.yml
.github/workflows/: apisec-scan.yml  checkmarx-one.yml  codeql-analysis.yml  defender-for-devops.yml  dependency-license-review.yml  fortify.yml
sarif/: javascript.sarif  python.sarif
