[project]
name = "worst-practices-demo"
version = "0.1.0"
description = "Intentionally insecure demo for GHAS scanning"
readme = "README.md"
authors = [ { name = "Demo" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
# Deliberately specifying vulnerable/old dependencies
dependencies = [
  "Flask==1.0",
  "pyjwt==1.7.1",
  "requests==2.32.4"
]

[tool.uv]
# uv specific settings (example) - allowing legacy resolver scenario
index-url = "https://pypi.org/simple"

[tool.uv.sources]
# (Optional) could specify alternate indices here

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
